--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -25,10 +25,10 @@ jobs:
           dotnet-version: '6.0' 
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore **/*.csproj
 
       - name: Build
-        run: dotnet build --configuration ${{ matrix.configuration }} --no-restore
+        run: dotnet build **/*.csproj --no-restore
 
       - name: Run tests
         run: dotnet test --configuration ${{ matrix.configuration }} --no-build --verbosity normal
